--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jsx": "^1.0.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "typescript": "^4.5.4",
     "web-vitals": "^1.1.2"
   },
