--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.25.0",
     "ejs": "^3.1.6",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
@@ -49,5 +50,5 @@
     "file-loader": "^6.2.0",
     "url-loader": "^4.1.1"
   },
-  "proxy": "http://localhost:1000/api/register"
+  "proxy": "http://localhost:5000/users"
 }
