--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.19.2",
     "axios": "^0.25.0",
     "ejs": "^3.1.6",
     "font-awesome": "^4.7.0",
