--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@material-ui/core": "^4.12.3",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/uuid": "^8.3.4",
     "antd": "^4.19.2",
     "axios": "^0.25.0",
     "ejs": "^3.1.6",
@@ -22,6 +22,8 @@
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^1.1.2"
   },
@@ -50,8 +52,12 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.7",
     "@types/react-dom": "^17.0.11",
+    "enzyme": "^3.11.0",
     "file-loader": "^6.2.0",
+    "redux-devtools-instrument": "^1.10.0",
+    "redux-mock-store": "^1.5.4",
     "url-loader": "^4.1.1"
   },
   "proxy": "http://localhost:5000/users"
