--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "react-website-neo",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3002/", 
+  "proxy": "http://localhost:3002/",
   "dependencies": {
+    "@extra-npm/validate": "^1.4.13",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@material-ui/core": "^4.12.3",
     "@reduxjs/toolkit": "^1.8.1",
@@ -14,6 +15,8 @@
     "axios": "^0.25.0",
     "ejs": "^3.1.6",
     "font-awesome": "^4.7.0",
+    "msw": "^0.39.2",
+    "msw-expect": "^2.0.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,6 +25,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "react-validation": "^3.0.7",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
@@ -55,6 +59,7 @@
   "devDependencies": {
     "@testing-library/react": "^11.2.7",
     "@types/react-dom": "^17.0.11",
+    "chai": "^4.3.6",
     "enzyme": "^3.11.0",
     "file-loader": "^6.2.0",
     "redux-devtools-instrument": "^1.10.0",
