--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "dependencies": {
     "@extra-npm/validate": "^1.4.13",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/user-event": "^12.8.3",
     "@types/uuid": "^8.3.4",
     "antd": "^4.19.2",
     "axios": "^0.25.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^3.0.1",
     "msw": "^0.39.2",
     "msw-expect": "^2.0.2",
     "node-sass": "^7.0.1",
@@ -24,10 +29,11 @@
     "react-jsx": "^1.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-validation": "^3.0.7",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^1.1.2"
